@@ -14,7 +14,7 @@ setGeneric("filterDuplReads",function(x,maxRepeats,fdrOverAmp=.01,negBinomUse=.9
 setGeneric("islandCounts", function(x, minReads=10, mc.cores=1) standardGeneric("islandCounts"))
 setGeneric("mergeRegions",function(intervals,chromosome,score,annot,aggregateFUN='median',maxDist=300) standardGeneric("mergeRegions"))
 setGeneric("PeakLocation", function(x, peakDistance=1000, startpos='start_position', endpos='end_position', strand='strand', distance, main='', xlab='Distance (bp)', densityType='kernel',breaks, ...) standardGeneric("PeakLocation"))
-setGeneric("plotMeanCoverage", function(cover, x, upstreambp=1000, downstreambp=5000, startpos='start_position', endpos='end_position', normalize=FALSE, main='', xlab='(bp)', ylab='Average coverage', ...) standardGeneric("plotMeanCoverage")) 
+setGeneric("plotMeanCoverage", function(cover, x, upstreambp=1000, downstreambp=5000, startpos='start_position', endpos='end_position', normalize=FALSE, smooth=FALSE, span=0.05, main='', xlab='(bp)', ylab='Average coverage', ...) standardGeneric("plotMeanCoverage")) 
 setGeneric("regionsCoverage", function(chr, start, end, cover) standardGeneric("regionsCoverage"))
 setGeneric("stdPeakLocation", function(x, peakDistance=1000, startpos='start_position', endpos='end_position', strand='strand', distance, main='', xlab='Distance relative to feature length', xaxt='n', xlim=c(-1,2), densityType='kernel', nbreaks=10, ...) standardGeneric("stdPeakLocation"))
 setGeneric("tabDuplReads", function(x, minRepeats=1, mc.cores=1) standardGeneric("tabDuplReads"))
